--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           git clone https://github.com/Redocly/redoc
           cd redoc
-          echo npm install
+          npm install
           npm run build:demo
           ls -l demo/dist
 
