--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "18.6.0"
       - name: Check out the repo and build demo.
         run: |
-          git clone https://github.com/Redocly/redoc
+          git clone -b v2.0.0 https://github.com/Redocly/redoc
           cd redoc
           export DOMAIN="https://service-iw6drlfr-1251018873.sh.apigw.tencentcs.com"
           sed -i '/port: 9090/i\   host: "0.0.0.0",' demo/webpack.config.ts
